# internal/openapi/model_activity_date_status.go
@@ -1,0 +1,186 @@
+/*
+Example API
+
+No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+
+API version: 1.0.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package openapi
+
+import (
+	"encoding/json"
+	"bytes"
+	"fmt"
+)
+
+// checks if the ActivityDateStatus type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &ActivityDateStatus{}
+
+// ActivityDateStatus struct for ActivityDateStatus
+type ActivityDateStatus struct {
+	Date string `json:"date"`
+	Status string `json:"status"`
+}
+
+type _ActivityDateStatus ActivityDateStatus
+
+// NewActivityDateStatus instantiates a new ActivityDateStatus object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewActivityDateStatus(date string, status string) *ActivityDateStatus {
+	this := ActivityDateStatus{}
+	this.Date = date
+	this.Status = status
+	return &this
+}
+
+// NewActivityDateStatusWithDefaults instantiates a new ActivityDateStatus object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewActivityDateStatusWithDefaults() *ActivityDateStatus {
+	this := ActivityDateStatus{}
+	return &this
+}
+
+// GetDate returns the Date field value
+func (o *ActivityDateStatus) GetDate() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Date
+}
+
+// GetDateOk returns a tuple with the Date field value
+// and a boolean to check if the value has been set.
+func (o *ActivityDateStatus) GetDateOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Date, true
+}
+
+// SetDate sets field value
+func (o *ActivityDateStatus) SetDate(v string) {
+	o.Date = v
+}
+
+// GetStatus returns the Status field value
+func (o *ActivityDateStatus) GetStatus() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Status
+}
+
+// GetStatusOk returns a tuple with the Status field value
+// and a boolean to check if the value has been set.
+func (o *ActivityDateStatus) GetStatusOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Status, true
+}
+
+// SetStatus sets field value
+func (o *ActivityDateStatus) SetStatus(v string) {
+	o.Status = v
+}
+
+func (o ActivityDateStatus) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o ActivityDateStatus) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["date"] = o.Date
+	toSerialize["status"] = o.Status
+	return toSerialize, nil
+}
+
+func (o *ActivityDateStatus) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"date",
+		"status",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varActivityDateStatus := _ActivityDateStatus{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varActivityDateStatus)
+
+	if err != nil {
+		return err
+	}
+
+	*o = ActivityDateStatus(varActivityDateStatus)
+
+	return err
+}
+
+type NullableActivityDateStatus struct {
+	value *ActivityDateStatus
+	isSet bool
+}
+
+func (v NullableActivityDateStatus) Get() *ActivityDateStatus {
+	return v.value
+}
+
+func (v *NullableActivityDateStatus) Set(val *ActivityDateStatus) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableActivityDateStatus) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableActivityDateStatus) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableActivityDateStatus(val *ActivityDateStatus) *NullableActivityDateStatus {
+	return &NullableActivityDateStatus{value: val, isSet: true}
+}
+
+func (v NullableActivityDateStatus) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableActivityDateStatus) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
