# internal/openapi/model_get_activities_grouped_response.go
@@ -1,0 +1,126 @@
+/*
+Example API
+
+No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+
+API version: 1.0.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package openapi
+
+import (
+	"encoding/json"
+)
+
+// checks if the GetActivitiesGroupedResponse type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &GetActivitiesGroupedResponse{}
+
+// GetActivitiesGroupedResponse struct for GetActivitiesGroupedResponse
+type GetActivitiesGroupedResponse struct {
+	Activities *map[string][]ActivityDateStatus `json:"activities,omitempty"`
+}
+
+// NewGetActivitiesGroupedResponse instantiates a new GetActivitiesGroupedResponse object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewGetActivitiesGroupedResponse() *GetActivitiesGroupedResponse {
+	this := GetActivitiesGroupedResponse{}
+	return &this
+}
+
+// NewGetActivitiesGroupedResponseWithDefaults instantiates a new GetActivitiesGroupedResponse object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewGetActivitiesGroupedResponseWithDefaults() *GetActivitiesGroupedResponse {
+	this := GetActivitiesGroupedResponse{}
+	return &this
+}
+
+// GetActivities returns the Activities field value if set, zero value otherwise.
+func (o *GetActivitiesGroupedResponse) GetActivities() map[string][]ActivityDateStatus {
+	if o == nil || IsNil(o.Activities) {
+		var ret map[string][]ActivityDateStatus
+		return ret
+	}
+	return *o.Activities
+}
+
+// GetActivitiesOk returns a tuple with the Activities field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *GetActivitiesGroupedResponse) GetActivitiesOk() (*map[string][]ActivityDateStatus, bool) {
+	if o == nil || IsNil(o.Activities) {
+		return nil, false
+	}
+	return o.Activities, true
+}
+
+// HasActivities returns a boolean if a field has been set.
+func (o *GetActivitiesGroupedResponse) HasActivities() bool {
+	if o != nil && !IsNil(o.Activities) {
+		return true
+	}
+
+	return false
+}
+
+// SetActivities gets a reference to the given map[string][]ActivityDateStatus and assigns it to the Activities field.
+func (o *GetActivitiesGroupedResponse) SetActivities(v map[string][]ActivityDateStatus) {
+	o.Activities = &v
+}
+
+func (o GetActivitiesGroupedResponse) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o GetActivitiesGroupedResponse) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	if !IsNil(o.Activities) {
+		toSerialize["activities"] = o.Activities
+	}
+	return toSerialize, nil
+}
+
+type NullableGetActivitiesGroupedResponse struct {
+	value *GetActivitiesGroupedResponse
+	isSet bool
+}
+
+func (v NullableGetActivitiesGroupedResponse) Get() *GetActivitiesGroupedResponse {
+	return v.value
+}
+
+func (v *NullableGetActivitiesGroupedResponse) Set(val *GetActivitiesGroupedResponse) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableGetActivitiesGroupedResponse) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableGetActivitiesGroupedResponse) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableGetActivitiesGroupedResponse(val *GetActivitiesGroupedResponse) *NullableGetActivitiesGroupedResponse {
+	return &NullableGetActivitiesGroupedResponse{value: val, isSet: true}
+}
+
+func (v NullableGetActivitiesGroupedResponse) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableGetActivitiesGroupedResponse) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
